Adapt criteria to support search by idFiscal (#496)